--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Pacifico', cursive;
 }
 
 body {
@@ -12,5 +13,177 @@ body {
 header {
     background-color: lightblue;
     width: 100%;
-    max-height: 60px;
+    height: auto;
 }
+
+header > nav {
+    padding: 20px;
+}
+
+.logo {
+    color: aliceblue;
+    font-size: 30px;
+    text-shadow: 
+    -1px -1px 0 #000,  
+     1px -1px 0 #000,
+    -1px  1px 0 #000,
+     1px  1px 0 #000;
+    text-align: center;
+}
+
+.logo a:visited, a:link {
+    color: aliceblue;
+    text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+.fa-solid {
+    color: white;
+    font-size: 40px;
+    cursor: pointer;
+    text-shadow:
+    -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px  1px 0 #000,
+    1px  1px 0 #000;
+}
+
+.hero {
+    background-image: url('../img/burger.png');
+    background-size: cover;
+    background-position: center; 
+    min-height: 400px; 
+    width: 100%;                    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2rem;
+}
+
+.hero h1 {
+    color: white;
+    text-shadow: 
+    -2px -2px 0 #000,  
+    2px -2px 0 #000,
+   -2px  2px 0 #000,
+    2px  2px 0 #000;
+    line-height: 1.1;
+}
+
+.hero h1 {
+    font-size: 50px;
+    text-align: center;
+}
+
+.hero a {
+    color: black;
+    padding: 20px;
+    background-color: lightyellow;
+    width: auto;
+    border-radius: 20px;
+    border: 3px solid black;
+    font-size: 25px;
+    font-weight: bold;    
+}
+
+.introduktion {
+    background-color: antiquewhite;
+    width: 100%;
+    height: auto;
+    padding: 15px;
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu h2 {
+    padding-bottom: 20px;
+}
+
+.fremhævet-menu {
+     width: 100%;
+     height: auto;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     flex-wrap: wrap;
+     gap: 20px;
+     padding-bottom: 20px;
+}
+
+.fremhævet-menu article {
+    background-color: antiquewhite;
+    height: auto;
+    width: 45%;
+    padding: 15px;
+    border-radius: 20px;
+    border: 3px solid black;
+    font-size: 18px;
+    text-align: center;
+}
+
+.fremhævet-menu > article > img {
+    width: 100%;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+footer {
+    background-color: lightblue;
+    width: 100%;
+    height: 100%;
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+}
+
+#copyright {
+    font-size: 12px;
+}
+
+footer p {
+    width: 100%;
+    height: 100%;
+    font-size: 18px;
+    font-weight: bold;
+
+}
+
+footer h4 {
+    width: 100%;
+    height: 100%;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+footer article {
+    padding: 20px;
+}
+
+footer a:link {
+    color: #000;
+    text-decoration: underline;
+}
+
+
+
+
