--- a/css/style.css
+++ b/css/style.css
@@ -101,17 +101,12 @@ ul {
     padding: 15px;
     font-size: 18px;
     text-align: center;
-    margin-bottom: 20px;
 }
 
 .menu {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.menu h2 {
-    padding-bottom: 20px;
 }
 
 .fremhævet-menu {
@@ -123,7 +118,6 @@ ul {
      justify-content: center;
      flex-wrap: wrap;
      gap: 20px;
-     padding-bottom: 20px;
 }
 
 .fremhævet-menu article {
@@ -137,53 +131,19 @@ ul {
     text-align: center;
 }
 
-.fremhævet-menu > article > img {
-    width: 100%;
-    height: 100px;
-    object-fit: cover;
-    border-radius: 10px;
-    margin-bottom: 10px;
-}
-
 footer {
-    background-color: lightblue;
-    width: 100%;
-    height: 100%;
+    background-color: blue;
+    width: 50%;
+    height: auto;
     padding: 25px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     text-align: center;
     justify-content: center;
 }
 
-#copyright {
-    font-size: 12px;
-}
-
 footer p {
     width: 100%;
-    height: 100%;
-    font-size: 18px;
-    font-weight: bold;
-
+    height: auto;
+    
 }
-
-footer h4 {
-    width: 100%;
-    height: 100%;
-    font-size: 25px;
-    font-weight: bold;
-}
-
-footer article {
-    padding: 20px;
-}
-
-footer a:link {
-    color: #000;
-    text-decoration: underline;
-}
-
-
-
-
